test/spec_vectors/func/fail/module_29.wat
(module (func $type-empty-f64-i32 (result f64 i32)))